Update dependencies and add docs for lab04